Update 9. Palindrome Number.md

--- a/9. Palindrome Number.md
+++ b/9. Palindrome Number.md
@@ -24,7 +24,7 @@ Explanation: Reads 01 from right to left. Therefore it is not a palindrome.
 ```
 
 ===================================
-Solution
+## Solution
 ===================================
 ``` /**
  * @param {number} x
@@ -39,4 +39,6 @@ var isPalindrome = function(x) {
     }else{
         return false
     }
-};```
+};
+
+```
